--- a/scss/_l-my-orders.scss
+++ b/scss/_l-my-orders.scss
@@ -87,7 +87,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        gap: 8px;
+        gap: 16px;
 
         &-price {
           flex: 0 0 auto;
@@ -97,12 +97,12 @@
         }
 
         &-tag {
+          max-width: 120px;
           padding: 7px 14px;
           border-radius: 32px;
-
-          @include mobilesm {
-            padding: 5px 10px;
-          }
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
 
           &_pending {
             color: #12c2e9;
@@ -142,16 +142,8 @@
           }
 
           &-text {
-            max-width: 120px;
             font-weight: 400;
             font-size: 11px;
-            overflow: hidden;
-            white-space: nowrap; 
-            text-overflow: ellipsis;
-
-            @include mobilesm {
-              font-size: 10px;
-            }
           }
         }
       }
